--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   postgres:
     image: postgres:15
-    container_name: prisma_postgres
+    container_name: camara_postgres
     restart: always
     environment:
       POSTGRES_USER: postgres
