--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "@prisma/client": "^5.22.0",
     "accepts": "^2.0.0",
     "aws-ssl-profiles": "^1.1.2",
+    "axios": "^1.13.5",
     "body-parser": "^2.2.2",
     "bytes": "^3.1.2",
     "c12": "^3.1.0",
@@ -22,6 +23,7 @@
     "cookie-signature": "^1.2.2",
     "cors": "^2.8.6",
     "cross-spawn": "^7.0.6",
+    "crypto": "^1.0.1",
     "csstype": "^3.2.3",
     "debug": "^4.4.3",
     "deepmerge-ts": "^7.1.5",
@@ -139,9 +141,9 @@
     "zeptomatch": "^2.1.0"
   },
   "scripts": {
-  "generate": ".\\node_modules\\.bin\\prisma.cmd generate",
-  "studio": ".\\node_modules\\.bin\\prisma.cmd studio"
-},
+    "generate": ".\\node_modules\\.bin\\prisma.cmd generate",
+    "studio": ".\\node_modules\\.bin\\prisma.cmd studio"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
